# rrcf

./: README.md  pyproject.toml  setup.py
newrrcf/: _kernels.py  newrrcf.py  shingle.py
rrcf/: __init__.py  rrcf.py  shingle.py
test/: test_rrcf.py
