[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rrcf"
version = "0.4.5"
description = "Robust random cut forest for anomaly detection"
authors = [
    {name = "Matt Bartos", email = "mdbartos@umich.edu"},
    {name = "Abhiram Mullapudi", email = "abhiramm@umich.edu"},
    {name = "Sara Troutman", email = "stroutm@umich.edu"}
]
license = {text = "MIT"}
dependencies = [
    "numpy"
]

[project.urls]
Homepage = "http://open-storm.org"
