[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rrcf"
version = "0.5.0"
description = "Robust random cut forest for anomaly detection"
authors = [
    {name = "Matt Bartos", email = "mdbartos@umich.edu"},
    {name = "Abhiram Mullapudi", email = "abhiramm@umich.edu"},
    {name = "Sara Troutman", email = "stroutm@umich.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy"
]

[project.urls]
Homepage = "http://open-storm.org"
