[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newrrcf"
version = "0.5.0"
description = "Robust random cut forest for anomaly detection"
authors = [
    {name = "Matt Bartos", email = "mdbartos@umich.edu"},
    {name = "Abhiram Mullapudi", email = "abhiramm@umich.edu"},
    {name = "Sara Troutman", email = "stroutm@umich.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numba>=0.62.1",
    "numpy",
]

[project.urls]
Homepage = "http://open-storm.org"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
